platform-backup/rollouts.yaml
apiVersion: v1
items:
- apiVersion: argoproj.io/v1alpha1
  kind: Rollout
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: springboot:argoproj.io/Rollout:springboot/springboot
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"argoproj.io/v1alpha1","kind":"Rollout","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"springboot:argoproj.io/Rollout:springboot/springboot"},"name":"springboot","namespace":"springboot"},"spec":{"replicas":2,"revisionHistoryLimit":3,"selector":{"matchLabels":{"app":"springboot"}},"strategy":{"canary":{"canaryService":"springboot-canary","stableService":"springboot","steps":[{"setWeight":20},{"pause":{"duration":"60s"}},{"setWeight":50},{"pause":{"duration":"6 [...]
      rollout.argoproj.io/revision: "2"
    creationTimestamp: "2026-08-02T11:53:20Z"
    generation: 5
    name: springboot
    namespace: springboot
    resourceVersion: "1529949"
    uid: ecbf26fd-59ea-466e-8169-d13237644af8
  spec:
    replicas: 2
    restartAt: "2026-08-02T15:38:07Z"
    revisionHistoryLimit: 3
    selector:
      matchLabels:
        app: springboot
    strategy:
      canary:
        canaryService: springboot-canary
        stableService: springboot
        steps:
        - setWeight: 20
        - pause:
            duration: 60s
        - setWeight: 50
        - pause:
            duration: 60s
        - setWeight: 100
        trafficRouting:
          istio:
            virtualService:
              name: springboot
              routes:
              - primary
    template:
      metadata:
        labels:
          app: springboot
      spec:
        containers:
        - image: 136863648867.dkr.ecr.us-east-1.amazonaws.com/platform-demo:b67b86c333347d00e7828fe334e5eaa651608343
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
          name: springboot
          ports:
          - containerPort: 8080
            protocol: TCP
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
        serviceAccountName: default
  status:
    HPAReplicas: 2
    availableReplicas: 2
    blueGreen: {}
    canary:
      weights:
        canary:
          podTemplateHash: 6c746f6fb6
          serviceName: springboot-canary
          weight: 0
        stable:
          podTemplateHash: 6c746f6fb6
          serviceName: springboot
          weight: 100
    conditions:
    - lastTransitionTime: "2026-08-02T12:17:21Z"
      lastUpdateTime: "2026-08-02T12:17:21Z"
      message: Rollout is paused
      reason: RolloutPaused
      status: "False"
      type: Paused
    - lastTransitionTime: "2026-08-02T12:17:53Z"
      lastUpdateTime: "2026-08-02T12:17:53Z"
      message: RolloutCompleted
      reason: RolloutCompleted
      status: "True"
      type: Completed
    - lastTransitionTime: "2026-08-02T15:39:44Z"
      lastUpdateTime: "2026-08-02T15:39:44Z"
      message: Rollout is healthy
      reason: RolloutHealthy
      status: "True"
      type: Healthy
    - lastTransitionTime: "2026-08-02T12:17:21Z"
      lastUpdateTime: "2026-08-02T15:39:44Z"
      message: ReplicaSet "springboot-6c746f6fb6" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2026-08-02T15:39:44Z"
      lastUpdateTime: "2026-08-02T15:39:44Z"
      message: Rollout has minimum availability
      reason: AvailableReason
      status: "True"
      type: Available
    currentPodHash: 6c746f6fb6
    currentStepHash: df7bccb87
    currentStepIndex: 5
    observedGeneration: "5"
    phase: Healthy
    readyReplicas: 2
    replicas: 2
    restartedAt: "2026-08-02T15:38:07Z"
    selector: app=springboot
    stableRS: 6c746f6fb6
    updatedReplicas: 2
kind: List
metadata:
  resourceVersion: ""
